<resources>
    <string name="app_name">Sinnet</string>
    <string name="action_settings">Settings</string>
    <string name="heart_ascii">&#10084;</string>
    <string name="sad_face">&#2639;</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receiver_label">Receiver</string>
    <string name="server_label">Server</string>
    <string name="player_name_hint">Enter Name</string>
    <string name="player_one_label">Player 1</string>
    <string name="player_two_label">Player 2</string>

    <string name="player_rith_name">Rith Lim</string>
    <string name="player_kim_name">Kim Ta Lim</string>
    <string name="player_lim_name">Lim</string>
    <string name="player_jason_name">Jason Kruske</string>

    <!-- ALERT DIALOG STRINGS -->
    <string name="reset_game_title">Game Score</string>
    <string name="reset_game_msg">Reset GAME scores?</string>

    <string name="reset_set_title">Set Score</string>
    <string name="reset_set_msg">Reset SET scores?</string>

    <string name="confirm_win_title">&#160;Win!!</string>
    <string name="confirm_win_msg">&#160;wins game.</string>
    <string name="confirm_win_neg_btn">Cancel</string>
    <string name="confirm_win_neutral_btn">Reset Game</string>

    <string name="third_set_scoring_title">Split Sets!</string>
    <string name="third_set_scoring_msg">Select Set Scoring.</string>
    <string name="third_set_scoring_game_pos">Full Set</string>
    <string name="third_set_scoring_10_point_neg">10pt TB</string>

    <string name="game_set_match_title">Game Set Match</string>
    <string name="game_set_match_msg">&#160;wins!</string>
    <string name="game_set_match_pos_btn">New Match</string>
    <string name="game_set_match_track_score_btn">Track Score</string>
    <string name="game_set_match_end_match_btn">End Match</string>
    <string name="quit_btn">Quit App</string>

    <string name="positive_btn_text">Confirm</string>
    <string name="negative_btn_text">Cancel</string>

    <!-- TOAST MESSAGES !-->
    <string name="toast_starting_1st_set">Start Set 1</string>
    <string name="toast_starting_2nd_set">Start Set 2</string>
    <string name="toast_starting_3rd_set">Start Set 3</string>
    <string name="toast_starting_new_match">Game Set Match!! Restarting.</string>
    <string name="title_activity_announcer">Announcer</string>

    <!-- ANNOUNCEMENT LABEL -->
    <string name="announcement_set_one">Set 1</string>
    <string name="announcement_set_two">Set 2</string>
    <string name="announcement_set_three">Set 3</string>
    <string name="announcement_sub_label">sub label</string>

    <!-- TUTORIAL -->
    <string name="tutorial_announcer_label">Tutorial</string>
    <string name="tutorial_announcer_complete">Tutorial Complete</string>
    <string name="tutorial_announcer_complete_sub_header">Good Job!</string>
    <string name="tutorial_announcer_sub_label">Some Basic Controls</string>
    <string name="tutorial_touch_to_begin">Touch here to begin tutorial</string>
    <string name="tutorial_swipe_up">Swipe UP to INCREASE game score.</string>
    <string name="tutorial_swipe_down">Swipe DOWN to DECREASE game score before deuce.</string>
    <string name="tutorial_reset_game">PRESS &amp; HOLD on game board to reset GAME score.</string>
    <string name="tutorial_reset_set">PRESS &amp; HOLD on set board to reset SET score.</string>
    <string name="tutorial_lets_play">Now let\'s play!</string>

    <!--LAUNCH -->
    <string name="launch_header">@string/app_name</string>
    <string name="launch_sub_header">FOCUS ON THE MATCH, NOT THE SCORE.</string>
    <string name="title_activity_launch">LaunchActivity</string>

</resources>
